--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "TOKEN": "",
+  "TOKEN": "ODU5Mjk0Mzk4ODQzNDUzNDgw.YNqmRQ.z8AYAtT6AWkh4E_7UYj_aTTd4aI",
   "YOUTUBE_API_KEY": "AIzaSyAB0SOHGg9ifgxMMQMw4KPOfGWI2IbQLIY",
   "SOUNDCLOUD_CLIENT_ID": "",
   "MAX_PLAYLIST_SIZE": 10,
